--- a/index.html
+++ b/index.html
@@ -63,14 +63,7 @@
     <input type="button" onclick="putDisk(0,3,1)" value="Show alert box">
 
 
-    <div id="debugArea";>
-
-        <textarea id="textArea" rows="8" cols="40" wrap="hard">
-            Debug area inside text area
-        </textarea>
-
-
-    </div>
+    <div id="debugArea";>Debug Area</div>
     
 </body>
 </html>
